--- a/lec_11.tex
+++ b/lec_11.tex
@@ -1,6 +1,6 @@
 %! TEX root = ./master.tex
 
-\lecture{11}{Week 6}{}
+\lecture{11}{Week 6}{Continue C Control Flow}
 
 \subsubsection{\code{switch} statement}
 We could implement a switch as a bunch of \code{if then else} and \code{goto} but that gets complicated with fall through and there would be very many comparisons. So compilers do not to that. Firstly, they differentiate between dense and spares \code{swtich} statements. 
