--- a/master.tex
+++ b/master.tex
@@ -1,7 +1,13 @@
 \documentclass[a4paper]{report}
 \input{../../preamble.tex}
 
-\title{System Programming and Computer Architectures}
+\title{Summary: System Programming and Computer Architectures}
+
+\usepackage{geometry}
+\geometry{paper=a4paper,left=32mm,right=23mm,top=35mm, bottom=35mm}
+
+% Remove TOC
+\renewcommand\contentsname{}
 
 \begin{document}
     \maketitle
@@ -11,24 +17,24 @@
     \input{lec_03.tex}
     \input{./lec_04.tex}
     \input{./lec_05.tex}
-%    \input{./lec_06.tex}
-%    \input{./lec_07.tex}
-%    \input{./lec_08.tex}
-%    \input{./lec_09.tex}
-%    \input{./lec_10.tex}
-%    \input{./lec_11.tex}
-%    \input{./lec_12.tex}
-%    \input{./lec_13.tex}
-%    \input{./lec_14.tex}
-%    \input{./lec_15.tex}
-%    \input{./lec_16.tex}
-%    \input{./lec_17.tex}
-%    \input{./lec_18.tex}
-%    \input{./lec_19.tex}
-%    \input{./lec_20.tex}
-%    \input{./lec_21.tex}
-%    \input{./lec_22.tex}
-%    \input{./lec_23.tex}
-%    \input{./lec_24.tex}
-%    \input{./lec_25.tex}
+    \input{./lec_06.tex}
+    \input{./lec_07.tex}
+    \input{./lec_08.tex}
+    \input{./lec_09.tex}
+    \input{./lec_10.tex}
+    \input{./lec_11.tex}
+    \input{./lec_12.tex}
+    \input{./lec_13.tex}
+    \input{./lec_14.tex}
+    \input{./lec_15.tex}
+    \input{./lec_16.tex}
+    \input{./lec_17.tex}
+    \input{./lec_18.tex}
+    \input{./lec_19.tex}
+    \input{./lec_20.tex}
+    \input{./lec_21.tex}
+    \input{./lec_22.tex}
+    \input{./lec_23.tex}
+    \input{./lec_24.tex}
+    \input{./lec_25.tex}
 \end{document}
