--- a/diffInRn.tex
+++ b/diffInRn.tex
@@ -293,3 +293,79 @@ For $X \subset \R^n$ open and $f: X \to \R^m \in C^2$. The Hessian matrix of $x$
     \item $H_f(x)$ is symmetric, square, $n \times n$.
 \end{compactitem}
 
+\subsection{Taylor Approximation}
+\subsubsection{Order 1}
+For $f: \R^n \to \R$, the Taylor Polynom of $f$ at $x_0$ of degree $q$ is $T_1f(y; x_0) := f(x_0) + \bigtriangledown f(x_0) \cdot y$.
+
+For a point $x_0$ close to $x$ the approximation of $x$ by a affine linear polynomial is $T_1(x - x_0; x_0)$.
+
+\begin{compactitem}
+    \item $T_1$ is equivalent to the affine linear approximation of $f$ we have seen before.
+\end{compactitem}
+
+\subsubsection{Order k}
+For $X \subset \R^n, x_0 \in X, f: X \to \R, f \in C^k$, the $k$-th Taylor polynomial of $f$ at $x_0$ is $T_k(y; x_0) = f(x_0) + \sum_{i=1}^{n} \frac{\partial f}{\partial x_i} (x_0) y_i + \dots + \sum_{m_1 + \dots + m_n = k} \frac{1}{m_1! \dots m_n!}\frac{\partial^k f}{\partial x_1^{m_1} \dots \partial x_n^{m_n}}(x_0)y_1^{m_1} \dots y_n^{m_n} = \sum_{|m| \le k} \frac{1}{m!} \partial_x^m f(x_0) y^m$. Where $y^m := (y_1^{m_1}, \dots , y_n^{m_n}$.
+
+For $f \in C^k(X; \R), x_0 \in X$. $T_k$ is approximation of $f$ at $x$ with $x_0$: $f(x) = T_kf(x - x_0; x_0) + E_k(f, x, x_0)$. For the error $E_k$ it holds $\lim_{x \to x_0} \frac{E_k(f, x, x_0)}{|x - x_0|^k} = 0$.
+
+\subsection{Critical Points}
+\subsubsection{Extrema}
+For $X \subset \R^n$ open and $f: X \to \R$ differentiable. We define a neighbourhood of $x_0$ as $B_r(x_0) = \{x \in \R^n | |x - x_0| < r\} \subset X$. If $x_0 \in X$:
+
+\begin{compactdesc}
+    \item[Local Maximum:] at $x_0$ is $f(x) \le f(x_0) \quad \forall x \in B_r(x_0)$.
+    \item[Local Minimum:] at $x_0$ is $f(x) \ge f(x_0) \quad \forall x \in R_r(x_0)$.
+\end{compactdesc}
+
+In that case:
+\begin{inparaitem}
+    \item  $df(x_0) = 0$
+    \item $\bigtriangledown f(x_0) = 0$
+    \item $\frac{\partial f}{\partial x_i}(x_0) = 0, 1 \le i \le n$
+\end{inparaitem}
+
+\subsubsection{Critical Point}
+For $X \subset \R^n$ open and $f: X \to \R$ differentiable. $x_0 \in X$, $\bigtriangledown f(x_0) = 0$ is a critical point.
+
+\begin{compactitem}
+    \item Critical points are candidates for local extrema.
+    \item Critical points which are not a local extrema are saddle points.
+\end{compactitem}
+
+\subsubsection{Global Extrema}
+For $\bar{X} = \text{innerPart}(X) \cup \text{boundary}(X) \subset \R^n$ compact (closed and bounded) and $f: \bar{X} \to \R$ differentiable. A global extrema exists and it is either at a critical point ($\in \text{innterPart}(X)$) or on the boundary ($\in \text{boundary}(X)$) of $\bar{X}$.
+
+\subsubsection{Non-Degenerate Critical Point} 
+For $X \subset \R^n$ open and $f: X \to \R \in C^2$. A critical point $x_0 \in X$ is called non-degenerate if $\text{det }\text{Hess}_f(x_) \neq 0$.
+
+\subsubsection{Definite/Indefinite}
+A symmetric matrix $A = (a_{i,j}) \in \R^{n \times n}$, with $\text{det } A \neq 0$ is:
+
+\begin{compactdesc}
+    \item[Positive Definite $\textbf{A > 0}$:] iff $xAx^t > 0 \forall x \in \R^n \setminus \{0\}$
+        \begin{compactitem}
+            \item All eigenvalues are positive.
+        \end{compactitem}
+    \item[Negative Definite $\textbf{A < 0}$:] iff $xAx^t < 0 \forall x \in \R^n \setminus \{0\}$
+        \begin{compactitem}
+            \item All eigenvalues are negative.
+        \end{compactitem}
+    \item[Indefinite:] otherwise
+        \begin{compactitem}
+            \item Mixed eigenvalues.
+        \end{compactitem}
+\end{compactdesc}
+
+\paragraph{Criteria}
+$A$ is positive definite $\iff \text{det }A_j > 0 \quad \forall 1 \le j \le n$ and $A_j = (a_{k,l})_{\substack{1 \le k \le j\\ 1 \le l \le j}}$
+
+\subsubsection{Local Min/Max}
+For $X \subset \R^n$ open, $f: X \to \R \in C^2$ and $x_0 \in X$ a non-degenerate critical point of $f$ ($\bigtriangledown f(x_0) = 0, \text{det Hess}_f (x_0) \neq 0$). Then:
+\begin{compactitem}
+    \item If $\text{Hess}_f (x_0) > 0 \implies x_0$ is a local minimum.
+    \item If $\text{Hess}_f (x_0) < 0 \implies x_0$ is a local maximum.
+    \item If $\text{Hess}_f (x_0)$ is indefinite $\implies x_0$ is saddle point.
+\end{compactitem}
+
+In case that $\text{Hess}_f (x_0) = 0$ (i.e. $x_0$ is degenerate) we cannot use this criteria.
+
